WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24787
Crash with bad transition shorthand when accelerated compositing is turned on
https://bugs.webkit.org/show_bug.cgi?id=24787
Summary
Crash with bad transition shorthand when accelerated compositing is turned on
Simon Fraser (smfr)
Reported
2009-03-24 15:26:31 PDT
The testcase to be attached has a bad transition shorthand, and it crashes if accelerated transitions are enabled.
Attachments
Testcase
(641 bytes, text/html)
2009-03-24 15:26 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch with test
(5.90 KB, patch)
2009-04-03 17:37 PDT
,
Chris Marrin
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-03-24 15:26:48 PDT
Created
attachment 28912
[details]
Testcase
Chris Marrin
Comment 2
2009-04-03 17:37:07 PDT
Created
attachment 29248
[details]
Patch with test
Chris Marrin
Comment 3
2009-04-03 17:49:39 PDT
Sending LayoutTests/ChangeLog Adding LayoutTests/transitions/bad-transition-shorthand-crash-expected.txt Adding LayoutTests/transitions/bad-transition-shorthand-crash.html Sending WebCore/ChangeLog Sending WebCore/page/animation/CompositeAnimation.cpp Sending WebCore/page/animation/ImplicitAnimation.cpp Transmitting file data ...... Committed revision 42222.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug