        Fixed https://bugs.webkit.org/show_bug.cgi?id=24787.

We were starting transitions with 0 duration and delay, which is
        useless. With accelerated compositing on, this went through a code
        path that tried to use m_toStyle, which never got set because the
        transitions was short circuited before it had a chance to. So I
        both protect against using that null pointer and avoid starting
        the transition in the first place.



Canonical link: https://commits.webkit.org/34277@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42222 268f45cc-cd09-0410-ab3c-d52691b4dbfc